--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.programming">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
               <p>HTML & CSS</p>
             </div>
             <p class="txt-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
